tests/fixtures/invalid/pow_bool_dict_bool.py
# Cannot call pow() with Bool, Dict[str, int], Bool
x = pow(True, {"a": 1}, True)
